post-check;id#: 1056;v: 1.0;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -27,11 +27,11 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * () edit: threejs-light write about new demo
 
 ### () - FRI 06/30/2023
-
+* () edit: linux-sudo - expand on post more
 * () build and publish
 
 ### () - THU 06/29/2023
-* () start post #1056 on linux-
+* (done) start post #1056 on linux-sudo
 
 * () edit: threejs-object3d-get-world-position - poof read
 
