post-check;id#: 874;v: 1.38;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -32,8 +32,10 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 ### () - THU 06/29/2023
 * (done) start post #1056 on linux-sudo
+* (done) edit: threejs-object3d-get-world-position - poof read
 
-* () edit: threejs-object3d-get-world-position - poof read
+* () forpost:  threejs-object3d-get-world-position - new loop demo
+* () edit: threejs-object3d-get-world-position - write about new loop demo
 
 * () json: work on 0.json of set1 for tri12-bufferfly json folder project 
 
