--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -4,40 +4,21 @@ Linux, THREEJS
 
 I will have to keep staying in my lane with threejs of course. However at this time I should also expand, and edit Linux content at least a little as well now. Linux is has a much wider user base, so there is the potential of more traffic. However in any case I use Linux every day, there is much more for me to learn about it, so it just makes sense to do more research, write more content, and improve the older content I have written thus far.
 
-
-<!-------- ----------
--- mrsun
----------- --------->
-* () idle-mrsun : finish r101
-* () idle-mrsun : start r102
-
 <!-------- ----------
 -- WEEK 5
 ---------- --------->
 ## () - WEEK 3 - SUN 06/25/2023 - FRI 06/30/2023
 
-* () demos 152 : examples-aplay-client - work out simple 2d graph display of sample data
-* () demos 152 : examples-aplay-client - start a module for this project
-* () videoground: expand todo list for r9 with features that allow for sample data rendering
-
-* () new : linux-lsof - start new post on listing open files
-* () forpost: threejs-buffer-geometry-attributes-normals - more examples
-* () edit: threejs-buffer-geometry-attributes-normals - write about new examples
-* () forpost: threejs-light - start nolight section
-* () edit: threejs-light write about new demo
-
 ### () - FRI 06/30/2023
-* () edit: linux-sudo - expand on post more
+* () edit: threejs-
 * () build and publish
+* () json: work on 0.json of set1 for tri12-bufferfly json folder project 
 
 ### () - THU 06/29/2023
 * (done) start post #1056 on linux-sudo
 * (done) edit: threejs-object3d-get-world-position - poof read
 * (done) forpost:  threejs-object3d-get-world-position - new loop demo
 * (done) edit: threejs-object3d-get-world-position - write about new loop demo
-
-* () json: work on 0.json of set1 for tri12-bufferfly json folder project 
-
 
 ### () - WED 06/28/2023
 * (done) edit: threejs-object3d-type - proof read
