--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -10,7 +10,8 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ## () - WEEK 3 - SUN 06/25/2023 - FRI 06/30/2023
 
 ### () - FRI 06/30/2023
-* () edit: threejs-
+* (done) edit: threejs-object3d-traverse - proof read
+* () edit: threejs-userdata - proof read
 * () build and publish
 * () json: work on 0.json of set1 for tri12-bufferfly json folder project 
 
