post-check;id#: 804;v: 1.53;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -11,7 +11,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 ### () - FRI 06/30/2023
 * (done) edit: threejs-object3d-traverse - proof read
-* () edit: threejs-userdata - proof read
+* (done) edit: threejs-userdata - proof read
 * () build and publish
 * () json: work on 0.json of set1 for tri12-bufferfly json folder project 
 
