post-check;id#: 858;v: 1.55;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -40,5 +40,9 @@ I would like to expand more with the use of video ground to make videos. This me
 ## () - WEEK 1 - SAT 07/01/2023 - SAT 07/01/2023
 
 ### () - SAT 06/24/2023
-* () 
+* () edit: threejs-color - proof read
+* () edit: threejs-buffer-geometry-set-from-points - proof read
+* () build and publish
+
+* () json: work on 0.json of set1 for tri12-bufferfly json folder project 
 
