post-check;id#: 858;v: 1.57;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -40,7 +40,10 @@ I would like to expand more with the use of video ground to make videos. This me
 ## () - WEEK 1 - SAT 07/01/2023 - SAT 07/01/2023
 
 ### () - SAT 06/24/2023
-* () edit: threejs-color - proof read
+* (done) edit: threejs-color - proof read
+* (done) forpost: threejs-color - new dmeos
+* (done) edit: trheejs-colot - write about new demos
+
 * () edit: threejs-buffer-geometry-set-from-points - proof read
 * () build and publish
 
