--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -43,9 +43,8 @@ I would like to expand more with the use of video ground to make videos. This me
 * (done) edit: threejs-color - proof read
 * (done) forpost: threejs-color - new dmeos
 * (done) edit: trheejs-colot - write about new demos
+* (done) edit: threejs-buffer-geometry-set-from-points - proof read
 
-* () edit: threejs-buffer-geometry-set-from-points - proof read
 * () build and publish
-
 * () json: work on 0.json of set1 for tri12-bufferfly json folder project 
 
