--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -31,6 +31,9 @@ I would like to expand more with the use of video ground to make videos. This me
 ---------- --------->
 ## () - WEEK 2 - SAT 07/02/2023 - SAT 07/08/2023
 
+### () - MON 07/03/2023
+* () new : linux-unar - start new blog post on unar that I used to extract rar files
+
 ### () - SUN 07/02/2023
 * () 
 
