post-check;id#: 1010;v: 1.16;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -33,9 +33,12 @@ I would like to expand more with the use of video ground to make videos. This me
 
 ### () - MON 07/03/2023
 * () new : linux-unar - start new blog post on unar that I used to extract rar files
+* () edit: threejs-dae-collada-loader
 
 ### () - SUN 07/02/2023
-* () 
+* (done) edit : threejs-curves-cubicbeziercurve3 - proof read
+* () build and publish
+* () json: work on 0.json of set1 for tri12-bufferfly json folder project 
 
 <!-------- ----------
 -- WEEK 1
@@ -47,7 +50,4 @@ I would like to expand more with the use of video ground to make videos. This me
 * (done) forpost: threejs-color - new dmeos
 * (done) edit: trheejs-colot - write about new demos
 * (done) edit: threejs-buffer-geometry-set-from-points - proof read
-
-* () build and publish
-* () json: work on 0.json of set1 for tri12-bufferfly json folder project 
 
