post-check;id#: 1027;v: 1.11;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -31,14 +31,27 @@ I would like to expand more with the use of video ground to make videos. This me
 ---------- --------->
 ## () - WEEK 2 - SAT 07/02/2023 - SAT 07/08/2023
 
+
+
+### () - SAT 07/08/2023
+
+### () - FRI 07/07/2023
+* () build and publish
+
+### () - THU 07/06/2023
+
+### () - WED 07/05/2023
+
+### () - TUE 07/04/2023
+
 ### () - MON 07/03/2023
-* () new : linux-unar - start new blog post on unar that I used to extract rar files
+* (done) edit: threejs-curves-cubicbeziercurve3
 * () edit: threejs-dae-collada-loader
+* () new : linux-unar - start post #1057 on unar that I used to extract rar files
+* () json: work on 0.json of set1 for tri12-bufferfly json folder project 
 
 ### () - SUN 07/02/2023
 * (done) edit : threejs-curves-cubicbeziercurve3 - proof read
-* () build and publish
-* () json: work on 0.json of set1 for tri12-bufferfly json folder project 
 
 <!-------- ----------
 -- WEEK 1
