--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -46,7 +46,7 @@ I would like to expand more with the use of video ground to make videos. This me
 
 ### () - MON 07/03/2023
 * (done) edit: threejs-curves-cubicbeziercurve3
-* () edit: threejs-dae-collada-loader
+* (done) edit: threejs-dae-collada-loader
 * () new : linux-unar - start post #1057 on unar that I used to extract rar files
 * () json: work on 0.json of set1 for tri12-bufferfly json folder project 
 
