--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -34,15 +34,24 @@ I would like to expand more with the use of video ground to make videos. This me
 
 
 ### () - SAT 07/08/2023
+* () edit: threejs-camera-orthographic - proof read
 
 ### () - FRI 07/07/2023
+* () edit: threejs-point-light - proof read
+* () edit: threejs-camera-perspective - proof read
 * () build and publish
 
 ### () - THU 07/06/2023
+* () edit: threejs-points - proof read
+* () edit: threejs-wireframe - proof read
 
 ### () - WED 07/05/2023
+* () edit: threejs-camera - proof read
+* () edit: threejs-points-material - proof read
 
 ### () - TUE 07/04/2023
+* () edit: threejs-capsule-geometry - proof read
+* () edit: threejs-emissive-map
 
 ### () - MON 07/03/2023
 * (done) edit: threejs-curves-cubicbeziercurve3
