post-check;id#: 1057;v: 1.0;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -56,7 +56,7 @@ I would like to expand more with the use of video ground to make videos. This me
 ### () - MON 07/03/2023
 * (done) edit: threejs-curves-cubicbeziercurve3
 * (done) edit: threejs-dae-collada-loader
-* () new : linux-unar - start post #1057 on unar that I used to extract rar files
+* (done) new : linux-unar - start post #1057 on unar that I used to extract rar files
 * () json: work on 0.json of set1 for tri12-bufferfly json folder project 
 
 ### () - SUN 07/02/2023
