--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -1,13 +1,16 @@
 # todo list for HULY 2023
 
-videoground, THREEJS, Linux
+'tri12 project', videoground, THREEJS, Linux
 
-I would like to expand more with the use of video ground to make videos. This means making more improvements to the program itself, and also starting new collections of content. With that said I will also want to keep up with threejs demos, posts, and so forth. The only other topic that I would slo like to expand on more for now is just Linux content as the only minor diversion from this.
+I would like to expand more with the use of video ground to make videos. This means making more improvements to the program itself, and also starting new collections of content. With that said I will also want to keep up with threejs demos, posts, and so forth as always. However I would like to start a 'tri12' project that will be a collection of modules composed of no more that 12 triangles. These can be used in my video ground projects when it comes to blog post videos, but I think the best way forward with this would be to start a whole other collection of video content. I might want to bump up the number of triangles a bit more maybe, but I still think that less will be more with these.
+
+The only other topic that I would also like to expand on more for now is just Linux content as the only minor diversion from this.
 
 <!-------- ----------
 -- videoground
 ---------- --------->
 * () videoground: expand todo list for r9 with features that allow for sample data rendering
+* () videoground-tri16 : new collection of video content centered around models that are composed of no more that 16 triangles
 * () videoground-aplay : start a new videoground content collection where the goal is to find ways to generate audo sample data
 * () videoground-meditation : start a whole collection of content that will be meditation style videos
 <!-------- ----------
@@ -54,10 +57,12 @@ I would like to expand more with the use of video ground to make videos. This me
 * () edit: threejs-emissive-map
 
 ### () - MON 07/03/2023
+<!-- demos / write / edit -->
 * (done) edit: threejs-curves-cubicbeziercurve3
 * (done) edit: threejs-dae-collada-loader
 * (done) new : linux-unar - start post #1057 on unar that I used to extract rar files
-* () json: work on 0.json of set1 for tri12-bufferfly json folder project 
+<!-- 'tri12' project -->
+* (done) json: work on readme file for tri12-butterfly
 
 ### () - SUN 07/02/2023
 * (done) edit : threejs-curves-cubicbeziercurve3 - proof read
