--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -51,10 +51,13 @@ The only other topic that I would also like to expand on more for now is just Li
 ### () - WED 07/05/2023
 * () edit: threejs-camera - proof read
 * () edit: threejs-points-material - proof read
+<!-- 'videoground-tri16' project -->
+* () start videoground-tri16 project starting with tri-12 models
 
 ### () - TUE 07/04/2023
 * () edit: threejs-capsule-geometry - proof read
 * () edit: threejs-emissive-map
+<!-- 'tri12' project -->
 
 ### () - MON 07/03/2023
 <!-- demos / write / edit -->
@@ -63,6 +66,8 @@ The only other topic that I would also like to expand on more for now is just Li
 * (done) new : linux-unar - start post #1057 on unar that I used to extract rar files
 <!-- 'tri12' project -->
 * (done) json: work on readme file for tri12-butterfly
+* (done) r152: demos : clean up source code for examples-tri12, mainly just whitespace
+* () r152: demos: start examples-tri12-scene demo that will make use of bufferfly, and trees
 
 ### () - SUN 07/02/2023
 * (done) edit : threejs-curves-cubicbeziercurve3 - proof read
