post-check;id#: 997;v: 1.28;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -55,19 +55,19 @@ The only other topic that I would also like to expand on more for now is just Li
 * () start videoground-tri16 project starting with tri-12 models
 
 ### () - TUE 07/04/2023
+<!-- write/edit -->
 * () edit: threejs-capsule-geometry - proof read
-* () edit: threejs-emissive-map
+* () edit: threejs-emissive-map - proof read
 <!-- 'tri12' project -->
+* () r152: demos: examples-tri12-scene - start to make a custom scene with the scene\_source object
 
 ### () - MON 07/03/2023
-<!-- demos / write / edit -->
 * (done) edit: threejs-curves-cubicbeziercurve3
 * (done) edit: threejs-dae-collada-loader
 * (done) new : linux-unar - start post #1057 on unar that I used to extract rar files
-<!-- 'tri12' project -->
 * (done) json: work on readme file for tri12-butterfly
 * (done) r152: demos : clean up source code for examples-tri12, mainly just whitespace
-* () r152: demos: start examples-tri12-scene demo that will make use of bufferfly, and trees
+* (done) r152: demos: start examples-tri12-scene demo that will make use of bufferfly, and trees
 
 ### () - SUN 07/02/2023
 * (done) edit : threejs-curves-cubicbeziercurve3 - proof read
