post-check;id#: 894;v: 1.48;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -56,7 +56,7 @@ The only other topic that I would also like to expand on more for now is just Li
 
 ### () - TUE 07/04/2023
 <!-- write/edit -->
-* () edit: threejs-capsule-geometry - proof read
+* (done) edit: threejs-capsule-geometry - proof read
 * () edit: threejs-emissive-map - proof read
 <!-- 'tri12' project -->
 * () r152: demos: examples-tri12-scene - start to make a custom scene with the scene\_source object
