--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -57,8 +57,8 @@ The only other topic that I would also like to expand on more for now is just Li
 ### () - TUE 07/04/2023
 * (done) edit: threejs-capsule-geometry - proof read
 * (done) edit: threejs-emissive-map - proof read
-* () forpost: threejs-capsule-geometry - new lathe geometry demo
-* () edit: threejs-capsule-geometry - write about new lathe geometry demo
+* (done) forpost: threejs-capsule-geometry - new lathe geometry demo
+* (done) edit: threejs-capsule-geometry - write about new lathe geometry demo
 
 <!-- 'tri12' project -->
 * () r152: demos: examples-tri12-scene - start to make a custom scene with the scene\_source object
