post-check;id#: 168;v: 1.36;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -45,12 +45,20 @@ The only other topic that I would also like to expand on more for now is just Li
 * () build and publish
 
 ### () - THU 07/06/2023
+<!-- edit -->
 * () edit: threejs-points - proof read
 * () edit: threejs-wireframe - proof read
+* () forpost: threejs-text-geometry - new demo
+* () edit: threejs-text-geometry - write abount new demo
+<!-- 'videoground-tri16' project -->
 
 ### () - WED 07/05/2023
-* () edit: threejs-camera - proof read
+<!-- edit -->
+* (done) edit: threejs-camera - proof read
 * () edit: threejs-points-material - proof read
+<!-- new -->
+* () forpost: threejs-text-geometry - start new for post folder starting with the r152 demo
+* () new : threejs-text-geometry - start post #1058 on text geometry
 <!-- 'videoground-tri16' project -->
 * () start videoground-tri16 project starting with tri-12 models
 
