post-check;id#: 186;v: 1.37;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -55,7 +55,7 @@ The only other topic that I would also like to expand on more for now is just Li
 ### () - WED 07/05/2023
 <!-- edit -->
 * (done) edit: threejs-camera - proof read
-* () edit: threejs-points-material - proof read
+* (done) edit: threejs-points-material - proof read
 <!-- new -->
 * () forpost: threejs-text-geometry - start new for post folder starting with the r152 demo
 * () new : threejs-text-geometry - start post #1058 on text geometry
