--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -53,12 +53,10 @@ The only other topic that I would also like to expand on more for now is just Li
 <!-- 'videoground-tri16' project -->
 
 ### () - WED 07/05/2023
-<!-- edit -->
 * (done) edit: threejs-camera - proof read
 * (done) edit: threejs-points-material - proof read
-<!-- new -->
-* () forpost: threejs-text-geometry - start new for post folder starting with the r152 demo
-* () new : threejs-text-geometry - start post #1058 on text geometry
+* (done) forpost: threejs-text-geometry - start new for post folder starting with the r152 demo
+* (done) new : threejs-text-geometry - start post #1058 on text geometry
 <!-- 'videoground-tri16' project -->
 * () start videoground-tri16 project starting with tri-12 models
 
