--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -38,11 +38,13 @@ The only other topic that I would also like to expand on more for now is just Li
 
 ### () - SAT 07/08/2023
 * () edit: threejs-camera-orthographic - proof read
+<!-- 'tri12' project -->
 
 ### () - FRI 07/07/2023
 * () edit: threejs-point-light - proof read
 * () edit: threejs-camera-perspective - proof read
 * () build and publish
+<!-- 'tri12' project -->
 
 ### () - THU 07/06/2023
 <!-- edit -->
@@ -50,24 +52,27 @@ The only other topic that I would also like to expand on more for now is just Li
 * () edit: threejs-wireframe - proof read
 * () forpost: threejs-text-geometry - new demo
 * () edit: threejs-text-geometry - write abount new demo
-<!-- 'videoground-tri16' project -->
+<!-- 'tri12' project -->
 
 ### () - WED 07/05/2023
 * (done) edit: threejs-camera - proof read
 * (done) edit: threejs-points-material - proof read
 * (done) forpost: threejs-text-geometry - start new for post folder starting with the r152 demo
 * (done) new : threejs-text-geometry - start post #1058 on text geometry
-<!-- 'videoground-tri16' project -->
-* () start videoground-tri16 project starting with tri-12 models
+<!-- 'tri12' project -->
+* () examples-tri12-scene - I will want to use object grid wrap like code for this demo
+* () examples-tri12-scene - have various kind of trees in a grid and move the grid along
+* () examples-tri12-scene - animate the butterfly
+* () examples-tri12-scene - animate the trees as well, adding morph attributes to any files that do not have them yet
+* () examples-tri12-scene - I will want additional JSON for land tiles as well
+
 
 ### () - TUE 07/04/2023
 * (done) edit: threejs-capsule-geometry - proof read
 * (done) edit: threejs-emissive-map - proof read
 * (done) forpost: threejs-capsule-geometry - new lathe geometry demo
 * (done) edit: threejs-capsule-geometry - write about new lathe geometry demo
-
-<!-- 'tri12' project -->
-* () r152: demos: examples-tri12-scene - start to make a custom scene with the scene\_source object
+* (done) r152: demos: examples-tri12-scene - start to make a custom scene with the scene\_source object
 
 ### () - MON 07/03/2023
 * (done) edit: threejs-curves-cubicbeziercurve3
