--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -51,8 +51,14 @@ The only other topic that I would also like to expand on more for now is just Li
 * () edit: threejs-points - proof read
 * () edit: threejs-wireframe - proof read
 * () forpost: threejs-text-geometry - new demo
-* () edit: threejs-text-geometry - write abount new demo
+* () edit: threejs-text-geometry - write about new demo
 <!-- 'tri12' project -->
+* () examples-tri12-scene - get opacity effect to work with the grid
+* () examples-tri12-scene - removed code that is not needed from grid module
+* () examples-tri12-scene - update code style of grid module to r152 style
+* () examples-tri12-scene - animate the butterfly
+* () examples-tri12-scene - animate the trees as well, adding morph attributes to any files that do not have them yet
+* () examples-tri12-scene - I will want additional JSON for land tiles as well
 
 ### () - WED 07/05/2023
 * (done) edit: threejs-camera - proof read
@@ -60,12 +66,8 @@ The only other topic that I would also like to expand on more for now is just Li
 * (done) forpost: threejs-text-geometry - start new for post folder starting with the r152 demo
 * (done) new : threejs-text-geometry - start post #1058 on text geometry
 <!-- 'tri12' project -->
-* () examples-tri12-scene - I will want to use object grid wrap like code for this demo
-* () examples-tri12-scene - have various kind of trees in a grid and move the grid along
-* () examples-tri12-scene - animate the butterfly
-* () examples-tri12-scene - animate the trees as well, adding morph attributes to any files that do not have them yet
-* () examples-tri12-scene - I will want additional JSON for land tiles as well
-
+* (done) examples-tri12-scene - I will want to use object grid wrap like code for this demo
+* (done) examples-tri12-scene - have various kind of trees in a grid and move the grid along
 
 ### () - TUE 07/04/2023
 * (done) edit: threejs-capsule-geometry - proof read
