post-check;id#: 1029;v: 1.10;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -48,7 +48,7 @@ The only other topic that I would also like to expand on more for now is just Li
 
 ### () - THU 07/06/2023
 <!-- edit -->
-* () edit: threejs-points - proof read
+* (done) edit: threejs-points - proof read
 * () edit: threejs-wireframe - proof read
 * () forpost: threejs-text-geometry - new demo
 * () edit: threejs-text-geometry - write about new demo
@@ -65,7 +65,6 @@ The only other topic that I would also like to expand on more for now is just Li
 * (done) edit: threejs-points-material - proof read
 * (done) forpost: threejs-text-geometry - start new for post folder starting with the r152 demo
 * (done) new : threejs-text-geometry - start post #1058 on text geometry
-<!-- 'tri12' project -->
 * (done) examples-tri12-scene - I will want to use object grid wrap like code for this demo
 * (done) examples-tri12-scene - have various kind of trees in a grid and move the grid along
 
