post-check;id#: 584;v: 1.54;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -49,7 +49,7 @@ The only other topic that I would also like to expand on more for now is just Li
 ### () - THU 07/06/2023
 <!-- edit -->
 * (done) edit: threejs-points - proof read
-* () edit: threejs-wireframe - proof read
+* (done) edit: threejs-wireframe - proof read
 * () forpost: threejs-text-geometry - new demo
 * () edit: threejs-text-geometry - write about new demo
 <!-- 'tri12' project -->
