post-check;id#: 1058;v: 1.6;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -50,8 +50,7 @@ The only other topic that I would also like to expand on more for now is just Li
 <!-- edit -->
 * (done) edit: threejs-points - proof read
 * (done) edit: threejs-wireframe - proof read
-* () forpost: threejs-text-geometry - new demo
-* () edit: threejs-text-geometry - write about new demo
+* (done) edit: threejs-text-geometry - expand conclusion
 <!-- 'tri12' project -->
 * () examples-tri12-scene - get opacity effect to work with the grid
 * () examples-tri12-scene - removed code that is not needed from grid module
