post-check;id#: 169;v: 1.58;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -38,19 +38,19 @@ The only other topic that I would also like to expand on more for now is just Li
 
 ### () - SAT 07/08/2023
 * () edit: threejs-camera-orthographic - proof read
+
 <!-- 'tri12' project -->
 
 ### () - FRI 07/07/2023
-* () edit: threejs-point-light - proof read
-* () edit: threejs-camera-perspective - proof read
-* () build and publish
-<!-- 'tri12' project -->
-
-### () - THU 07/06/2023
 <!-- edit -->
-* (done) edit: threejs-points - proof read
-* (done) edit: threejs-wireframe - proof read
-* (done) edit: threejs-text-geometry - expand conclusion
+* (done) edit: threejs-camera-perspective - proof read
+* (done) edit: threejs-point-light - proof read
+
+* () forpost: threejs-point-light - new loop section demo
+* () edit: threejs-point-light - write about new demo
+
+<!-- publish -->
+* () build and publish
 <!-- 'tri12' project -->
 * () examples-tri12-scene - get opacity effect to work with the grid
 * () examples-tri12-scene - removed code that is not needed from grid module
@@ -58,6 +58,11 @@ The only other topic that I would also like to expand on more for now is just Li
 * () examples-tri12-scene - animate the butterfly
 * () examples-tri12-scene - animate the trees as well, adding morph attributes to any files that do not have them yet
 * () examples-tri12-scene - I will want additional JSON for land tiles as well
+
+### () - THU 07/06/2023
+* (done) edit: threejs-points - proof read
+* (done) edit: threejs-wireframe - proof read
+* (done) edit: threejs-text-geometry - expand conclusion
 
 ### () - WED 07/05/2023
 * (done) edit: threejs-camera - proof read
