post-check;id#: 169;v: 1.59;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -45,10 +45,11 @@ The only other topic that I would also like to expand on more for now is just Li
 <!-- edit -->
 * (done) edit: threejs-camera-perspective - proof read
 * (done) edit: threejs-point-light - proof read
-
-* () forpost: threejs-point-light - new loop section demo
-* () edit: threejs-point-light - write about new demo
-
+* (done) forpost: threejs-camera-perspective - new loop section demo
+* (done) edit: threejs-camera-perspective - write about new demo
+<!-- videoground -->
+* () videoground-blog-posts: make a video for the new demo made for threejs-camera-perspective
+* () videoground-blog-posts: upload and embed the new video for threejs-camera-perspective
 <!-- publish -->
 * () build and publish
 <!-- 'tri12' project -->
