--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -37,9 +37,12 @@ The only other topic that I would also like to expand on more for now is just Li
 
 
 ### () - SAT 07/08/2023
+<!-- edit -->
 * () edit: threejs-camera-orthographic - proof read
-
 <!-- 'tri12' project -->
+* () examples-tri12-scene - animate the butterfly
+* () examples-tri12-scene - animate the trees as well, adding morph attributes to any files that do not have them yet
+* () examples-tri12-scene - I will want additional JSON for land tiles as well
 
 ### () - FRI 07/07/2023
 <!-- edit -->
@@ -51,14 +54,11 @@ The only other topic that I would also like to expand on more for now is just Li
 * (done) videoground-blog-posts: make a video for the new demo made for threejs-camera-perspective
 * (done) videoground-blog-posts: upload and embed the new video for threejs-camera-perspective
 <!-- publish -->
-* () build and publish
+* (done) build and publish
 <!-- 'tri12' project -->
-* () examples-tri12-scene - get opacity effect to work with the grid
-* () examples-tri12-scene - removed code that is not needed from grid module
-* () examples-tri12-scene - update code style of grid module to r152 style
-* () examples-tri12-scene - animate the butterfly
-* () examples-tri12-scene - animate the trees as well, adding morph attributes to any files that do not have them yet
-* () examples-tri12-scene - I will want additional JSON for land tiles as well
+* (done) examples-tri12-scene - get opacity effect to work with the grid
+* (done) examples-tri12-scene - removed code that is not needed from grid module
+* (done) examples-tri12-scene - update code style of grid module to r152 style by using let and const at least
 
 ### () - THU 07/06/2023
 * (done) edit: threejs-points - proof read
