post-check;id#: 189;v: 1.49;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -38,7 +38,7 @@ The only other topic that I would also like to expand on more for now is just Li
 
 ### () - SAT 07/08/2023
 <!-- edit -->
-* () edit: threejs-camera-orthographic - proof read
+* (done) edit: threejs-camera-orthographic - proof read
 <!-- 'tri12' project -->
 * () examples-tri12-scene - animate the butterfly
 * () examples-tri12-scene - animate the trees as well, adding morph attributes to any files that do not have them yet
