--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -29,33 +29,38 @@ The only other topic that I would also like to expand on more for now is just Li
 * () new : linux-visudo - see about working out a post on using visudo and adding a new user
 * () new : linux-lsof - start new post on listing open files
 
+
+<!-------- ----------
+-- WEEK 3
+---------- --------->
+## () - WEEK 3 - SAT 07/09/2023 - SAT 07/15/2023
+
+
+### () - SUN 07/09/2023
+<!-- edit -->
+* () edit: threejs-
+<!-- 'tri12' project -->
+* () examples-tri12-scene - animate the trees as well, adding morph attributes to any files that do not have them yet
+* () examples-tri12-scene - I will want additional JSON for land tiles as well
+
 <!-------- ----------
 -- WEEK 2
 ---------- --------->
 ## () - WEEK 2 - SAT 07/02/2023 - SAT 07/08/2023
 
-
-
 ### () - SAT 07/08/2023
-<!-- edit -->
 * (done) edit: threejs-camera-orthographic - proof read
-<!-- 'tri12' project -->
-* () examples-tri12-scene - animate the butterfly
-* () examples-tri12-scene - animate the trees as well, adding morph attributes to any files that do not have them yet
-* () examples-tri12-scene - I will want additional JSON for land tiles as well
+* (done) examples-tri12-scene - new module form of object grid wrap
+* (done) examples-tri12-scene - animate the butterfly
 
 ### () - FRI 07/07/2023
-<!-- edit -->
 * (done) edit: threejs-camera-perspective - proof read
 * (done) edit: threejs-point-light - proof read
 * (done) forpost: threejs-camera-perspective - new loop section demo
 * (done) edit: threejs-camera-perspective - write about new demo
-<!-- videoground -->
 * (done) videoground-blog-posts: make a video for the new demo made for threejs-camera-perspective
 * (done) videoground-blog-posts: upload and embed the new video for threejs-camera-perspective
-<!-- publish -->
 * (done) build and publish
-<!-- 'tri12' project -->
 * (done) examples-tri12-scene - get opacity effect to work with the grid
 * (done) examples-tri12-scene - removed code that is not needed from grid module
 * (done) examples-tri12-scene - update code style of grid module to r152 style by using let and const at least
