post-check;id#: 583;v: 1.43;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -14,22 +14,16 @@ The only other topic that I would also like to expand on more for now is just Li
 * () videoground-aplay : start a new videoground content collection where the goal is to find ways to generate audo sample data
 * () videoground-meditation : start a whole collection of content that will be meditation style videos
 <!-------- ----------
--- EXPAND THREEJS
+-- EXPAND THREEJS - Forcus more so on a top ten of sorts to get to 5000+ words and 10+ demos and beyond
 ---------- --------->
-* () demos 152 : examples-aplay-client - work out simple 2d graph display of sample data
-* () demos 152 : examples-aplay-client - start a module for this project
-* () forpost: threejs-buffer-geometry-attributes-normals - more examples
-* () edit: threejs-buffer-geometry-attributes-normals - write about new examples
-* () forpost: threejs-light - start nolight section
-* () edit: threejs-light write about new demo
+* () threejs-object3d-position - There is having a demo for raycaster
+* () threejs-buffer-geometry-position - 
 <!-------- ----------
 -- NEW POST IDEAS FOR LINUX
 ---------- --------->
 * () new : linux-apt - start a post on the main apt command
 * () new : linux-visudo - see about working out a post on using visudo and adding a new user
 * () new : linux-lsof - start new post on listing open files
-
-
 <!-------- ----------
 -- WEEK 3
 ---------- --------->
@@ -38,7 +32,7 @@ The only other topic that I would also like to expand on more for now is just Li
 
 ### () - SUN 07/09/2023
 <!-- edit -->
-* () edit: threejs-
+* (done) edit: threejs-mesh-copy - proof read
 <!-- 'tri12' project -->
 * () examples-tri12-scene - animate the trees as well, adding morph attributes to any files that do not have them yet
 * () examples-tri12-scene - I will want additional JSON for land tiles as well
