--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -30,12 +30,16 @@ The only other topic that I would also like to expand on more for now is just Li
 ## () - WEEK 3 - SAT 07/09/2023 - SAT 07/15/2023
 
 
+### () - MON 07/10/2023
+<!-- 'tri12' project -->
+* () examples-tri12-scene - see about animating the trees as well
+
 ### () - SUN 07/09/2023
 <!-- edit -->
 * (done) edit: threejs-mesh-copy - proof read
 <!-- 'tri12' project -->
-* () examples-tri12-scene - animate the trees as well, adding morph attributes to any files that do not have them yet
-* () examples-tri12-scene - I will want additional JSON for land tiles as well
+* (done) examples-tri12-scene - I will want additional JSON for land tiles as well
+* (done) examples-tri12-sceen - helper function for creating land tile objects
 
 <!-------- ----------
 -- WEEK 2
