--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -31,13 +31,13 @@ The only other topic that I would also like to expand on more for now is just Li
 
 
 ### () - MON 07/10/2023
+<!-- edit -->
+* () edit: threejs-vector3-normalize - 
 <!-- 'tri12' project -->
 * () examples-tri12-scene - see about animating the trees as well
 
 ### () - SUN 07/09/2023
-<!-- edit -->
 * (done) edit: threejs-mesh-copy - proof read
-<!-- 'tri12' project -->
 * (done) examples-tri12-scene - I will want additional JSON for land tiles as well
 * (done) examples-tri12-sceen - helper function for creating land tile objects
 
