post-check;id#: 888;v: 1.41;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -32,7 +32,7 @@ The only other topic that I would also like to expand on more for now is just Li
 
 ### () - MON 07/10/2023
 <!-- edit -->
-* () edit: threejs-vector3-normalize - 
+* (done) edit: threejs-vector3-normalize - new basic demo
 <!-- 'tri12' project -->
 * () examples-tri12-scene - see about animating the trees as well
 
