--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -14,7 +14,7 @@ The only other topic that I would also like to expand on more for now is just Li
 * () videoground-aplay : start a new videoground content collection where the goal is to find ways to generate audo sample data
 * () videoground-meditation : start a whole collection of content that will be meditation style videos
 <!-------- ----------
--- EXPAND THREEJS - Forcus more so on a top ten of sorts to get to 5000+ words and 10+ demos and beyond
+-- EDIT 5k+ - Forcus more so on a top ten of sorts to get to 5000+ words and 10+ demos and beyond
 ---------- --------->
 * () threejs-object3d-position - There is having a demo for raycaster
 * () threejs-buffer-geometry-position - 
@@ -30,11 +30,37 @@ The only other topic that I would also like to expand on more for now is just Li
 ## () - WEEK 3 - SAT 07/09/2023 - SAT 07/15/2023
 
 
+### () - SAT 07/15/2023
+<!-- edit -->
+* () edit: threejs-math-utils - proof read
+
+### () - FRI 07/14/2023
+<!-- edit -->
+* () edit: threejs-vector3-multiply-scalar - proof read
+
+### () - THU 07/13/2023
+<!-- edit -->
+* () edit: threejs-vector3-distance-to - proof read
+
+### () - WED 07/12/2023
+<!-- edit -->
+* () edit: threejs-vector3-wrap - proof read
+
+### () - TUE 07/11/2023
+<!-- edit -->
+* () edit: threejs-vector3-clamp - proof read
+
 ### () - MON 07/10/2023
 <!-- edit -->
 * (done) edit: threejs-vector3-normalize - new basic demo
-<!-- 'tri12' project -->
+<!-- new threejs -->
+* () animation-clip - start an animation-clip r152 demo
 * () examples-tri12-scene - see about animating the trees as well
+* () examples-bumper - demo where the idea is to start making a program for making bumper sticker designs
+<!-- new Linux -->
+* () 
+<!-- 5k+ posts -->
+* () edit -
 
 ### () - SUN 07/09/2023
 * (done) edit: threejs-mesh-copy - proof read
