--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -54,7 +54,10 @@ The only other topic that I would also like to expand on more for now is just Li
 <!-- edit -->
 * (done) edit: threejs-vector3-normalize - new basic demo
 <!-- new threejs -->
-* () animation-clip - start an animation-clip r152 demo
+* (done) animation-clip - start an animation-clip r152 demo
+* () animation-mixer - start a demo on animation mixer
+* () animation-mixer-settime - the set time method is what I will want to use in a loop for video projects
+
 * () examples-tri12-scene - see about animating the trees as well
 * () examples-bumper - demo where the idea is to start making a program for making bumper sticker designs
 <!-- new Linux -->
