post-check;id#: 853;v: 1.59;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -41,29 +41,24 @@ The only other topic that I would also like to expand on more for now is just Li
 ### () - THU 07/13/2023
 <!-- edit -->
 * () edit: threejs-vector3-distance-to - proof read
+* () new : threejs-animation-clip - start post #1060
 
 ### () - WED 07/12/2023
 <!-- edit -->
 * () edit: threejs-vector3-wrap - proof read
 
 ### () - TUE 07/11/2023
+<!-- new Linux -->
+* () new: linux-apt - start post #1059
 <!-- edit -->
 * () edit: threejs-vector3-clamp - proof read
 
 ### () - MON 07/10/2023
-<!-- edit -->
 * (done) edit: threejs-vector3-normalize - new basic demo
-<!-- new threejs -->
 * (done) animation-clip - start an animation-clip r152 demo
-* () animation-mixer - start a demo on animation mixer
-* () animation-mixer-settime - the set time method is what I will want to use in a loop for video projects
-
+* (done) edit: threejs-box-geometry - new uv section demos
+<!-- tri12 -->
 * () examples-tri12-scene - see about animating the trees as well
-* () examples-bumper - demo where the idea is to start making a program for making bumper sticker designs
-<!-- new Linux -->
-* () 
-<!-- 5k+ posts -->
-* () edit -
 
 ### () - SUN 07/09/2023
 * (done) edit: threejs-mesh-copy - proof read
