post-check;id#: 890;v: 1.43;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -45,20 +45,21 @@ The only other topic that I would also like to expand on more for now is just Li
 
 ### () - WED 07/12/2023
 <!-- edit -->
-* () edit: threejs-vector3-wrap - proof read
+* () edit: threejs-vector3-wrap - I want the length demo, and also an updated simple grid loop with opacity
 
 ### () - TUE 07/11/2023
+<!-- edit -->
+* (done) edit: threejs-vector3-clamp - wrap unit length demo
 <!-- new Linux -->
 * () new: linux-apt - start post #1059
-<!-- edit -->
-* () edit: threejs-vector3-clamp - proof read
+
+<!-- tri12 -->
+* () examples-tri12-scene - 
 
 ### () - MON 07/10/2023
 * (done) edit: threejs-vector3-normalize - new basic demo
 * (done) animation-clip - start an animation-clip r152 demo
 * (done) edit: threejs-box-geometry - new uv section demos
-<!-- tri12 -->
-* () examples-tri12-scene - see about animating the trees as well
 
 ### () - SUN 07/09/2023
 * (done) edit: threejs-mesh-copy - proof read
