post-check;id#: 1059;v: 1.0;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -46,12 +46,13 @@ The only other topic that I would also like to expand on more for now is just Li
 ### () - WED 07/12/2023
 <!-- edit -->
 * () edit: threejs-vector3-wrap - I want the length demo, and also an updated simple grid loop with opacity
+* () edit: linux-apt - expand on the post more
 
 ### () - TUE 07/11/2023
 <!-- edit -->
 * (done) edit: threejs-vector3-clamp - wrap unit length demo
 <!-- new Linux -->
-* () new: linux-apt - start post #1059
+* (done) new: linux-apt - start post #1059
 
 <!-- tri12 -->
 * () examples-tri12-scene - 
