post-check;id#: 1003;v: 1.23;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -42,20 +42,19 @@ The only other topic that I would also like to expand on more for now is just Li
 <!-- edit -->
 * () edit: threejs-vector3-distance-to - proof read
 * () new : threejs-animation-clip - start post #1060
+<!-- tri12 -->
+* () examples-tri12-scene - 
 
 ### () - WED 07/12/2023
 <!-- edit -->
-* () edit: threejs-vector3-wrap - I want the length demo, and also an updated simple grid loop with opacity
-* () edit: linux-apt - expand on the post more
+* (done) forpost: threejs-vector3-wrap - new wrap value section, grid demo
+* (done) edit: threejs-vector3-wrap - update post with new content
 
 ### () - TUE 07/11/2023
 <!-- edit -->
 * (done) edit: threejs-vector3-clamp - wrap unit length demo
 <!-- new Linux -->
 * (done) new: linux-apt - start post #1059
-
-<!-- tri12 -->
-* () examples-tri12-scene - 
 
 ### () - MON 07/10/2023
 * (done) edit: threejs-vector3-normalize - new basic demo
