--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -41,7 +41,8 @@ The only other topic that I would also like to expand on more for now is just Li
 ### () - THU 07/13/2023
 <!-- edit -->
 * () edit: threejs-vector3-distance-to - proof read
-* () new : threejs-animation-clip - start post #1060
+* () edit: threejs-vector3-multiply-scalar - proof read
+* () new : threejs-animation-mixer - start post #1060
 <!-- tri12 -->
 * () examples-tri12-scene - 
 
@@ -51,9 +52,7 @@ The only other topic that I would also like to expand on more for now is just Li
 * (done) edit: threejs-vector3-wrap - update post with new content
 
 ### () - TUE 07/11/2023
-<!-- edit -->
 * (done) edit: threejs-vector3-clamp - wrap unit length demo
-<!-- new Linux -->
 * (done) new: linux-apt - start post #1059
 
 ### () - MON 07/10/2023
