--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -40,7 +40,7 @@ The only other topic that I would also like to expand on more for now is just Li
 
 ### () - THU 07/13/2023
 <!-- edit -->
-* () edit: threejs-vector3-distance-to - proof read
+* (done) edit: threejs-vector3-distance-to - proof read
 * () edit: threejs-vector3-multiply-scalar - proof read
 * () new : threejs-animation-mixer - start post #1060
 <!-- tri12 -->
