post-check;id#: 961;v: 1.33;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -32,16 +32,18 @@ The only other topic that I would also like to expand on more for now is just Li
 
 ### () - SAT 07/15/2023
 <!-- edit -->
-* () edit: threejs-math-utils - proof read
+
 
 ### () - FRI 07/14/2023
 <!-- edit -->
-* () edit: threejs-vector3-multiply-scalar - proof read
+* () edit: threejs-math-utils - proof read and expand
 
 ### () - THU 07/13/2023
 <!-- edit -->
 * (done) edit: threejs-vector3-distance-to - proof read
-* () edit: threejs-vector3-multiply-scalar - proof read
+* (done) edit: threejs-vector3-multiply-scalar - proof read
+* (done) edit: threejs-grid-helper - proof read
+
 * () new : threejs-animation-mixer - start post #1060
 <!-- tri12 -->
 * () examples-tri12-scene - 
