--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -43,7 +43,8 @@ The only other topic that I would also like to expand on more for now is just Li
 * (done) edit: threejs-vector3-distance-to - proof read
 * (done) edit: threejs-vector3-multiply-scalar - proof read
 * (done) edit: threejs-grid-helper - proof read
-* () edit: edit: threejs-vector3-multiply-scalar - write more about new curve demo for copy section of post
+* (done) edit: edit: threejs-vector3-multiply-scalar - write more about new curve demo for copy section of post
+* () forpost: threejs-animation-mixer - start a for post folder for this post starting with the clip r152 demo
 * () new : threejs-animation-mixer - start post #1060
 <!-- tri12 -->
 * () examples-tri12-scene - 
