--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -36,7 +36,9 @@ The only other topic that I would also like to expand on more for now is just Li
 
 ### () - FRI 07/14/2023
 <!-- edit -->
+* () edit: threejs-animation-mixer - write about new tri12 demo section
 * () edit: threejs-math-utils - proof read and expand
+* () build and publish
 
 ### () - THU 07/13/2023
 <!-- edit -->
@@ -46,8 +48,6 @@ The only other topic that I would also like to expand on more for now is just Li
 * (done) edit: edit: threejs-vector3-multiply-scalar - write more about new curve demo for copy section of post
 * (done) forpost: threejs-animation-mixer - start a for post folder for this post starting with the clip r152 demo
 * (done) new : threejs-animation-mixer - start post #1060
-<!-- tri12 -->
-* () examples-tri12-scene - 
 
 ### () - WED 07/12/2023
 <!-- edit -->
