post-check;id#: 1060;v: 1.4;

--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -35,13 +35,11 @@ The only other topic that I would also like to expand on more for now is just Li
 
 
 ### () - FRI 07/14/2023
-<!-- edit -->
-* () edit: threejs-animation-mixer - write about new tri12 demo section
+* (done) edit: threejs-animation-mixer - write about new tri12 demo section
 * () edit: threejs-math-utils - proof read and expand
 * () build and publish
 
 ### () - THU 07/13/2023
-<!-- edit -->
 * (done) edit: threejs-vector3-distance-to - proof read
 * (done) edit: threejs-vector3-multiply-scalar - proof read
 * (done) edit: threejs-grid-helper - proof read
@@ -50,7 +48,6 @@ The only other topic that I would also like to expand on more for now is just Li
 * (done) new : threejs-animation-mixer - start post #1060
 
 ### () - WED 07/12/2023
-<!-- edit -->
 * (done) forpost: threejs-vector3-wrap - new wrap value section, grid demo
 * (done) edit: threejs-vector3-wrap - update post with new content
 
