--- a/todo/today/todo_2023_07.md
+++ b/todo/today/todo_2023_07.md
@@ -25,9 +25,16 @@ The only other topic that I would also like to expand on more for now is just Li
 * () new : linux-visudo - see about working out a post on using visudo and adding a new user
 * () new : linux-lsof - start new post on listing open files
 <!-------- ----------
+-- WEEK 4
+---------- --------->
+## () - WEEK 4 - SUN 07/16/2023 - SAT 07/22/2023
+
+* () start the electionjs app that is the position attribute editor idea
+
+<!-------- ----------
 -- WEEK 3
 ---------- --------->
-## () - WEEK 3 - SAT 07/09/2023 - SAT 07/15/2023
+## () - WEEK 3 - SUN 07/09/2023 - SAT 07/15/2023
 
 
 ### () - SAT 07/15/2023
